--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ html, body {
   background: #fff;
 }
 
+/* --- PRIMEIRA TELA (PERFEITA, NÃO MEXER) --- */
 #intro {
   position: fixed;
   inset: 0;
@@ -22,7 +23,7 @@ html, body {
   align-items: center;
   background: url('capa.png') no-repeat center center;
   background-size: cover;
-  transition: opacity 1.8s ease;
+  transition: opacity 1.2s ease;
 }
 
 #intro button {
@@ -32,7 +33,7 @@ html, body {
   border: none;
   background: #6a1b9a;
   color: #fff;
-  max-width: 70%;  /* largura menor e centralizada */
+  max-width: 70%;  
   cursor: pointer;
 }
 
@@ -41,6 +42,7 @@ html, body {
   pointer-events: none;
 }
 
+/* --- SEGUNDA TELA --- */
 #formulario {
   display: none;
   min-height: 100vh;
@@ -48,6 +50,7 @@ html, body {
   background-color: #fff;
 }
 
+/* Fundo topo/baixo */
 #formulario .fundo-topo {
   background: url('topo.png') no-repeat top center;
   background-size: cover;
@@ -60,9 +63,10 @@ html, body {
   height: 30vh;
 }
 
+/* Container do card (formulário) */
 .card-container {
   position: absolute;
-  top: 40px; /* deixa espaço para logo da imagem topo */
+  top: 80px; /* DESCEU MAIS PARA NÃO COBRIR LOGO */
   left: 0;
   right: 0;
   display: flex;
@@ -73,14 +77,14 @@ html, body {
 .card {
   background: #fff;
   max-width: 380px;
-  width: 90%;
+  width: 85%; /* MANTER ESPAÇO NAS LATERAIS */
   padding: 28px 24px 32px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
   text-align: left;
   opacity: 0;
   transform: translateY(40px);
-  transition: all 1.6s ease;
+  transition: all 1.0s ease; /* TRANSIÇÃO MAIS RÁPIDA */
 }
 
 .card.ativo {
@@ -152,7 +156,7 @@ button:disabled { opacity: 0.7; }
 </head>
 <body>
 
-<!-- PRIMEIRA TELA -->
+<!-- PRIMEIRA TELA (NÃO MEXER) -->
 <div id="intro">
   <button onclick="mostrarFormulario()">Acessar Questionário</button>
 </div>
@@ -228,8 +232,8 @@ function mostrarFormulario() {
     intro.style.display = 'none';
     formulario.style.display = 'block';
     const card = document.getElementById('card');
-    setTimeout(() => card.classList.add('ativo'), 100);
-  }, 1800);
+    setTimeout(() => card.classList.add('ativo'), 50); // transição um pouco mais rápida
+  }, 1200);
 }
 
 // --- Progress Bar ---
