--- a/index.html
+++ b/index.html
@@ -3,102 +3,122 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Validação de Visitas</title>
+<title>Validação de Visita – Nichele Tintas</title>
 
 <style>
+/* --- GERAL --- */
 html, body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
   min-height: 100%;
-  background: #fff;
+  background: #f2f2f2;
 }
 
-/* --- PRIMEIRA TELA (PERFEITA, NÃO MEXER) --- */
+button {
+  cursor: pointer;
+}
+
+/* --- PRIMEIRA TELA --- */
 #intro {
   position: fixed;
   inset: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('capa.png') no-repeat center center;
-  background-size: cover;
-  transition: opacity 1.2s ease;
+  background: linear-gradient(120deg, #6a1b9a, #9c27b0, #ffca28);
+  transition: opacity 1.2s ease, filter 1.2s ease;
+}
+
+#intro.fade-out {
+  opacity: 0;
+  filter: blur(14px);
+  pointer-events: none;
 }
 
 #intro button {
   font-size: 18px;
   padding: 14px 28px;
-  border-radius: 12px;
-  border: none;
   background: #6a1b9a;
   color: #fff;
-  max-width: 70%;  
-  cursor: pointer;
-}
-
-#intro.fade-out {
-  opacity: 0;
-  pointer-events: none;
+  border: none;
+  border-radius: 12px;
+  max-width: 250px;
+  width: 80%;
+  text-align: center;
 }
 
 /* --- SEGUNDA TELA --- */
 #formulario {
   display: none;
-  min-height: 100vh;
   position: relative;
-  background-color: #fff;
+  width: 100%;
+  height: 100vh;
+  overflow-y: auto;
 }
 
-/* Fundo topo/baixo */
-#formulario .fundo-topo {
-  background: url('topo.png') no-repeat top center;
+/* Fundo topo e baixo */
+#fundo-topo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: url('topo.png') no-repeat center top;
   background-size: cover;
-  height: 40vh;
+  z-index: 0;
 }
 
-#formulario .fundo-baixo {
-  background: url('baixo.png') no-repeat bottom center;
+#fundo-baixo {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: url('baixo.png') no-repeat center bottom;
   background-size: cover;
-  height: 30vh;
+  z-index: 0;
 }
 
 /* Container do card (formulário) */
 .card-container {
   position: absolute;
-  top: 80px; /* DESCEU MAIS PARA NÃO COBRIR LOGO */
+  top: 80px;    /* espaço topo */
+  bottom: 80px; /* espaço inferior igual ao topo */
   left: 0;
   right: 0;
   display: flex;
   justify-content: center;
+  align-items: flex-start; 
   z-index: 2;
 }
 
+/* Card do formulário */
 .card {
   background: #fff;
   max-width: 380px;
-  width: 85%; /* MANTER ESPAÇO NAS LATERAIS */
+  width: 90%; /* espaço lateral maior */
   padding: 28px 24px 32px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
   text-align: left;
   opacity: 0;
   transform: translateY(40px);
-  transition: all 1.0s ease; /* TRANSIÇÃO MAIS RÁPIDA */
+  transition: all 1.0s ease;
 }
 
-.card.ativo {
-  opacity: 1;
-  transform: translateY(0);
+.card h2 {
+  text-align: center;
+  color: #6a1b9a;
+  margin-bottom: 10px;
 }
 
-/* --- Barra de progresso --- */
 .progress {
   height: 4px;
   background: #e0e0e0;
   border-radius: 4px;
   overflow: hidden;
-  margin-bottom: 12px;
+  margin-bottom: 16px;
 }
 
 .progress span {
@@ -125,6 +145,8 @@ input, select, textarea, button {
   box-sizing: border-box;
 }
 
+textarea { resize: vertical; }
+
 button {
   background: #6a1b9a;
   color: #fff;
@@ -136,38 +158,26 @@ button {
 button.sucesso { background: #2e7d32; }
 button:disabled { opacity: 0.7; }
 
-.final {
-  text-align: center;
-}
+.final { text-align: center; }
+.final .check { font-size: 56px; color: #2e7d32; }
 
-.final .check {
-  font-size: 56px;
-  color: #2e7d32;
-}
-
-.visitas-externas {
-  text-align: center;
-  font-weight: bold;
-  margin-bottom: 12px;
-  font-size: 18px;
-  color: #6a1b9a;
-}
 </style>
 </head>
 <body>
 
-<!-- PRIMEIRA TELA (NÃO MEXER) -->
+<!-- PRIMEIRA TELA -->
 <div id="intro">
   <button onclick="mostrarFormulario()">Acessar Questionário</button>
 </div>
 
 <!-- SEGUNDA TELA -->
 <div id="formulario">
-  <div class="fundo-topo"></div>
+  <div id="fundo-topo"></div>
+  <div id="fundo-baixo"></div>
 
   <div class="card-container">
     <div class="card" id="card">
-      <div class="visitas-externas">Visitas Externas</div>
+      <h2>Visitas Externas</h2>
       <div class="progress"><span id="progressBar"></span></div>
 
       <label>Vendedor</label>
@@ -213,39 +223,43 @@ button:disabled { opacity: 0.7; }
       <input type="file" id="camera" hidden accept="image/*" capture="environment">
 
       <button id="btnEnviar" onclick="enviar()">✅ Confirmar Visita</button>
-      <p id="statusFoto"></p>
       <p id="status"></p>
     </div>
   </div>
-
-  <div class="fundo-baixo"></div>
 </div>
 
 <script>
 let latitude, longitude, endereco = "", fotoBase64 = null;
+
+// URL do Google Apps Script
 const API_URL = "https://script.google.com/macros/s/AKfycbw3kM0KukrHTN_c0K0fQQXJAKFxBFVd4EmOyuopHBsmrac9agIgrBZvWxzUnIdo_xzG9w/exec";
 
-// --- Transição ---
+// Mostrar formulário
 function mostrarFormulario() {
-  intro.classList.add('fade-out');
+  const intro = document.getElementById("intro");
+  const form = document.getElementById("formulario");
+  const card = document.getElementById("card");
+
+  intro.classList.add("fade-out");
   setTimeout(() => {
-    intro.style.display = 'none';
-    formulario.style.display = 'block';
-    const card = document.getElementById('card');
-    setTimeout(() => card.classList.add('ativo'), 50); // transição um pouco mais rápida
-  }, 1200);
+    intro.style.display = "none";
+    form.style.display = "block";
+    setTimeout(() => {
+      card.style.opacity = 1;
+      card.style.transform = "translateY(0)";
+    }, 50);
+  }, 800); // transição um pouco mais rápida
 }
 
-// --- Progress Bar ---
+// Barra de progresso
 const campos = ["vendedor","codigoVendedor","loja","tipoCliente","statusVisita"];
 campos.forEach(id => document.getElementById(id).addEventListener("input", atualizarProgresso));
-
 function atualizarProgresso() {
   const p = campos.filter(id => document.getElementById(id).value).length;
-  progressBar.style.width = (p / campos.length) * 100 + "%";
+  document.getElementById("progressBar").style.width = (p / campos.length) * 100 + "%";
 }
 
-// --- Localização ---
+// Captura de localização
 function capturarLocalizacao() {
   navigator.geolocation.getCurrentPosition(async pos => {
     latitude = pos.coords.latitude;
@@ -255,40 +269,40 @@ function capturarLocalizacao() {
     const data = await res.json();
     endereco = data.display_name || "";
 
-    btnLoc.textContent = "Localização capturada ✅";
-    btnLoc.classList.add("sucesso");
-    localizacao.innerText = endereco;
+    const btn = document.getElementById("btnLoc");
+    btn.textContent = "Localização capturada ✅";
+    btn.classList.add("sucesso");
+    document.getElementById("localizacao").innerText = endereco;
+    atualizarProgresso(); // conta no progresso
   });
 }
 
-// --- Câmera ---
-camera.addEventListener("change", e => {
+// Câmera
+document.getElementById("camera").addEventListener("change", e => {
   const r = new FileReader();
   r.onload = () => {
     fotoBase64 = r.result;
-    statusFoto.innerText = "Imagem salva ✅";
+    alert("Imagem salva");
+    atualizarProgresso();
   };
   r.readAsDataURL(e.target.files[0]);
 });
 
-function abrirCamera() {
-  camera.click();
-}
+function abrirCamera() { document.getElementById("camera").click(); }
 
-// --- Envio ---
+// Envio do formulário
 function enviar() {
-  btnEnviar.textContent = "Enviando...";
-  btnEnviar.disabled = true;
+  if (!latitude || !fotoBase64) { alert("Falta localização ou foto"); return; }
 
   fetch(API_URL, {
     method: "POST",
     body: JSON.stringify({
-      vendedor: vendedor.value,
-      codigoVendedor: codigoVendedor.value,
-      loja: loja.value,
-      tipoCliente: tipoCliente.value,
-      statusVisita: statusVisita.value,
-      observacoes: observacoes.value,
+      vendedor: document.getElementById("vendedor").value,
+      codigoVendedor: document.getElementById("codigoVendedor").value,
+      loja: document.getElementById("loja").value,
+      tipoCliente: document.getElementById("tipoCliente").value,
+      statusVisita: document.getElementById("statusVisita").value,
+      observacoes: document.getElementById("observacoes").value,
       lat: latitude,
       lng: longitude,
       endereco: endereco,
@@ -297,12 +311,18 @@ function enviar() {
   })
   .then(r => r.json())
   .then(() => {
-    status.innerText = "Visita confirmada ✅";
-    card.innerHTML += `<div class="final"><div class="check">✅</div><h2>Visita registrada</h2></div>`;
+    const card = document.getElementById("card");
+    card.innerHTML = `
+      <div class="final">
+        <div class="check">✅</div>
+        <h2>Visita confirmada</h2>
+        <p>Dados enviados com sucesso</p>
+        <button onclick="window.close()">Finalizar</button>
+      </div>
+    `;
   })
   .catch(() => {
-    btnEnviar.textContent = "Erro ao enviar";
-    btnEnviar.disabled = false;
+    document.getElementById("status").innerText = "Erro ao enviar dados";
   });
 }
 </script>
