--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@ html, body {
   background: #f2f2f2;
 }
 
-button {
-  cursor: pointer;
-}
-
 /* --- PRIMEIRA TELA --- */
 #intro {
   position: fixed;
@@ -26,7 +22,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(120deg, #6a1b9a, #9c27b0, #ffca28);
+  background: url('capa.png') no-repeat center center;
+  background-size: cover;
   transition: opacity 1.2s ease, filter 1.2s ease;
 }
 
@@ -46,6 +43,7 @@ button {
   max-width: 250px;
   width: 80%;
   text-align: center;
+  z-index: 1;
 }
 
 /* --- SEGUNDA TELA --- */
@@ -91,13 +89,14 @@ button {
   justify-content: center;
   align-items: flex-start; 
   z-index: 2;
+  padding: 0 16px; /* espaço lateral */
 }
 
 /* Card do formulário */
 .card {
   background: #fff;
   max-width: 380px;
-  width: 90%; /* espaço lateral maior */
+  width: 100%; /* ocupa até max-width, mas respeita padding do container */
   padding: 28px 24px 32px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
